Changelog for assignment 9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+LAB ASSIGNMENT 9
+Main Features
+- Created a from for adding new boxcard components to the homepage
+- Created a method to send the user input data to the backend
+
+Side Features
+- None this week
+
+
+
 LAB ASSIGNMENT 8
 Main Features
 - Set up Angular Fire Library
